--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "bunyan-shadower",
-  "version": "1.0.1",
+  "name": "log-skeleton",
+  "version": "1.0.0",
   "description": "Object that allows you to call the buyan log API even if the logger was never initialized.",
-  "main": "lib/bunyan-shadower.js",
+  "main": "lib/log-skeleton.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mewwts/bunyan-shadower"
+    "url": "https://github.com/mewwts/log-skeleton"
   },
   "author": "Mats Julian Olsen",
   "license": "MIT",
