--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mats Julian Olsen",
   "license": "MIT",
   "devDependencies": {
+    "mocha": "^2.2.5",
     "should": "^7.0.1"
   }
 }
